--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+files/
+.vscode
+
 # Created by https://www.toptal.com/developers/gitignore/api/cuda,c++,c,vscode,ssh,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=cuda,c++,c,vscode,ssh,python
 
