--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 OBJDIR=../objs
 
 EXECUTABLE := ${OBJDIR}/cudaPca
-CU_FILES   := pca.cu svd.cu
+CU_FILES   := pca.cu svd.cu stats.cu svdapprox.cu
 CU_DEPS    :=
 CC_FILES   := main.cpp
 
@@ -15,7 +15,7 @@ CXXFLAGS=-O3 -Wall
 LDFLAGS=-L/usr/local/cuda-11.2/lib64/ -lcudart -lcublas -lcusolver
 NVCC=nvcc
 NVCCFLAGS= -O3 -m64 -arch compute_86 -code sm_86 -ccbin /usr/bin/gcc
-OBJS= $(OBJDIR)/main.o $(OBJDIR)/timelogger.o $(OBJDIR)/pca.o $(OBJDIR)/svd.o
+OBJS= $(OBJDIR)/main.o $(OBJDIR)/timelogger.o $(OBJDIR)/pca.o $(OBJDIR)/svd.o $(OBJDIR)/svdapprox.o $(OBJDIR)/stats.o 
 
 .PHONY: dirs clean
 
